feat(kernel): `store`

--- a/packages/hoppscotch-kernel/package.json
+++ b/packages/hoppscotch-kernel/package.json
@@ -40,10 +40,7 @@
     "vite": "5.4.11"
   },
   "peerDependencies": {
-    "@tauri-apps/api": "2.1.1",
-    "@tauri-apps/plugin-shell": "2.0.1",
-    "@tauri-apps/plugin-dialog": "2.0.1",
-    "@tauri-apps/plugin-fs": "2.0.2"
+    "@tauri-apps/api": "2.1.1"
   },
   "peerDependenciesMeta": {
     "@tauri-apps/api": {
@@ -54,6 +51,11 @@
     "axios": "1.6.2",
     "fp-ts": "2.16.9",
     "aws4fetch": "1.0.20",
+    "zod": "3.22.4",
+    "@tauri-apps/plugin-shell": "2.0.1",
+    "@tauri-apps/plugin-dialog": "2.0.1",
+    "@tauri-apps/plugin-fs": "2.0.2",
+    "@tauri-apps/plugin-store": "2.2.0",
     "@hoppscotch/plugin-relay": "github:CuriousCorrelation/tauri-plugin-hoppscotch-relay"
   }
 }
