--- a/packages/hoppscotch-kernel/tsconfig.base.json
+++ b/packages/hoppscotch-kernel/tsconfig.base.json
@@ -14,6 +14,7 @@
       "~/*": ["src/*"],
       "@io/*": ["src/io/*"],
       "@relay/*": ["src/relay/*"],
+      "@store/*": ["src/store/*"],
       "@type/*": ["src/type/*"],
       "@util/*": ["src/util/*"]
     }
