feat(kernel): `store` - persist network settings

--- a/packages/hoppscotch-kernel/package.json
+++ b/packages/hoppscotch-kernel/package.json
@@ -52,6 +52,7 @@
     "fp-ts": "2.16.9",
     "aws4fetch": "1.0.20",
     "zod": "3.22.4",
+    "superjson": "2.2.2",
     "@tauri-apps/plugin-shell": "2.0.1",
     "@tauri-apps/plugin-dialog": "2.0.1",
     "@tauri-apps/plugin-fs": "2.0.2",
