--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -91,6 +91,7 @@
     "splitpanes": "3.1.5",
     "stream-browserify": "3.0.0",
     "subscriptions-transport-ws": "0.11.0",
+    "superjson": "2.2.2",
     "tern": "0.24.3",
     "timers": "0.1.1",
     "tippy.js": "6.3.7",
