--- a/packages/hoppscotch-desktop/tauri-plugin-hoppscotch-appload/Cargo.toml
+++ b/packages/hoppscotch-desktop/tauri-plugin-hoppscotch-appload/Cargo.toml
@@ -33,6 +33,20 @@ humantime-serde = "1.1.1"
 futures = "0.3.31"
 mime_guess = "2.0.5"
 rayon = "1.10.0"
+hex_color = "3.0.0"
 
 [build-dependencies]
 tauri-plugin = { version = "2.0.1", features = ["build"] }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+cocoa = "0.26.0"
+objc = "0.2.7"
+rand = "0.8.5"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.58.0", features = [
+  "Win32_Graphics_Dwm",
+  "Win32_Foundation",
+  "Win32_UI_Controls",
+] }
+winver = "1.0.0"
