--- a/packages/hoppscotch-desktop/tauri-plugin-hoppscotch-appload/package.json
+++ b/packages/hoppscotch-desktop/tauri-plugin-hoppscotch-appload/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tauri-plugin-hoppscotch-appload-api",
+  "name": "@hoppscotch/plugin-appload",
   "version": "0.1.0",
   "author": "CuriousCorrelation",
-  "description": "",
+  "description": "A Tauri plugin for downloading and loading Hoppscotch web app bundles into WebView.",
   "type": "module",
   "types": "./dist-js/index.d.ts",
   "main": "./dist-js/index.cjs",
@@ -17,12 +17,12 @@
     "README.md"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "build": "tsc && rollup -c",
     "prepublishOnly": "pnpm build",
     "pretest": "pnpm build"
   },
   "dependencies": {
-    "@tauri-apps/api": ">=2.0.0-beta.6"
+    "@tauri-apps/api": "^2.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
