feat(kernel): `auth`

--- a/packages/hoppscotch-selfhost-web/package.json
+++ b/packages/hoppscotch-selfhost-web/package.json
@@ -32,6 +32,9 @@
     "@hoppscotch/ui": "0.2.1",
     "@import-meta-env/unplugin": "0.6.0",
     "@tauri-apps/api": "2.1.1",
+    "@tauri-apps/plugin-shell": "2.0.1",
+    "@tauri-apps/plugin-dialog": "2.0.1",
+    "@tauri-apps/plugin-fs": "2.0.2",
     "axios": "1.7.7",
     "buffer": "6.0.3",
     "fp-ts": "2.16.9",
