--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@
 # - admin: The self-host admin dashboard only
 # - webapp: The static web app server only
 # - database: Just the PostgreSQL database
+# - except-webapp: All services except webapp for local development
 # - deprecated: All deprecated services (not recommended)
 
 # USAGE:
@@ -21,6 +22,7 @@
 # To run the default setup: docker compose --profile default up
 # To run without database: docker compose --profile default-no-db up
 # To run specific components: docker compose --profile backend up
+# To run all except webapp: docker compose --profile except-webapp up
 # To run deprecated services: docker compose --profile deprecated up
 
 # NOTE: The default and default-no-db profiles should not be mixed with individual service
@@ -29,7 +31,7 @@
 services:
   # This service runs the backend app in the port 3170
   hoppscotch-backend:
-    profiles: ["backend"]
+    profiles: ["backend", "except-webapp"]
     container_name: hoppscotch-backend
     build:
       dockerfile: prod.Dockerfile
@@ -75,7 +77,7 @@ services:
   # NOTE: To do TLS or play around with how the app is hosted, you can look into the Caddyfile for
   #       the SH admin dashboard server at packages/hoppscotch-sh-admin/Caddyfile
   hoppscotch-sh-admin:
-    profiles: ["admin"]
+    profiles: ["admin", "except-webapp"]
     container_name: hoppscotch-sh-admin
     build:
       dockerfile: prod.Dockerfile
@@ -127,7 +129,7 @@ services:
   # you are using an external postgres instance
   # This will be exposed at port 5432
   hoppscotch-db:
-    profiles: ["default", "database"]
+    profiles: ["default", "database", "except-webapp"]
     image: postgres:15
     ports:
       - "5432:5432"
@@ -150,7 +152,7 @@ services:
 
   # Auto-migration service - handles database migrations automatically
   hoppscotch-migrate:
-    profiles: ["default"]
+    profiles: ["default", "except-webapp"]
     build:
       dockerfile: prod.Dockerfile
       context: .
@@ -230,7 +232,10 @@ services:
 #    docker compose --profile webapp up   # Just the static web server
 #    docker compose --profile database up # Just the database
 #
-# 4. Deprecated services:
+# 4. Development deployment:
+#    docker compose --profile except-webapp up  # All services except webapp
+#
+# 5. Deprecated services:
 #    docker compose --profile deprecated up
 #    This will start all deprecated services (not recommended for new deployments)
 #
