--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -44,6 +44,7 @@
     "@noble/curves": "1.6.0",
     "@scure/base": "1.1.9",
     "@shopify/lang-jsonc": "1.0.0",
+    "@types/markdown-it": "14.1.2",
     "@unhead/vue": "1.11.10",
     "@urql/core": "5.0.6",
     "@urql/devtools": "2.0.3",
@@ -70,6 +71,7 @@
     "jsonpath-plus": "10.0.0",
     "lodash-es": "4.17.21",
     "lossless-json": "4.0.2",
+    "markdown-it": "14.1.0",
     "minisearch": "7.1.0",
     "nprogress": "0.2.0",
     "paho-mqtt": "1.1.0",
