feat(platform): host, csp and bundle compatibility
- Bundle name format for using as host
- Windows UI handler HWND casting and version detection
- CSP headers type handling in URI protocol
- Protocol whitelist in env config

--- a/packages/hoppscotch-desktop/tauri-plugin-hoppscotch-appload/.gitignore
+++ b/packages/hoppscotch-desktop/tauri-plugin-hoppscotch-appload/.gitignore
@@ -10,8 +10,13 @@ yarn.lock
 
 /.tauri
 /target
-Cargo.lock
 node_modules/
+# Devenv
+.devenv*
+devenv.local.nix
 
-dist-js
-dist
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
