--- a/packages/hoppscotch-desktop/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-desktop/src-tauri/Cargo.toml
@@ -30,3 +30,7 @@ tauri-plugin-fs = "2.2.0"
 tauri-plugin-deep-link = "2.2.0"
 tauri-plugin-hoppscotch-appload = { git = "https://github.com/CuriousCorrelation/tauri-plugin-hoppscotch-appload" }
 tauri-plugin-hoppscotch-relay = { git = "https://github.com/CuriousCorrelation/tauri-plugin-hoppscotch-relay" }
+axum = "0.8.1"
+tower-http = { version = "0.6.2", features = ["cors"] }
+portpicker = "0.1.1"
+tokio = "1.43.0"
