--- a/packages/hoppscotch-selfhost-web/tsconfig.json
+++ b/packages/hoppscotch-selfhost-web/tsconfig.json
@@ -16,6 +16,7 @@
       "@hoppscotch/common": ["../hoppscotch-common/src/index.ts"],
       "@hoppscotch/common/*": ["../hoppscotch-common/src/*"],
       "@platform/*": ["./src/platform/*"],
+      "@platform-components/*": ["./src/components/*"],
       "@api/*": ["./src/api/*"],
       "@lib/*": ["./src/lib/*"]
     }
