feat(backend): `auth` token flow, gql/websocket
feat(desktop): working auth for gql

feat: gql client with refresh token

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
   # NOTE: To do TLS or play around with how the app is hosted, you can look into the Caddyfile for
   #       the SH admin dashboard server at packages/hoppscotch-sh-admin/Caddyfile
   hoppscotch-sh-admin:
-    profiles: ["admin", "except-webapp"]
+    profiles: ["admin"]
     container_name: hoppscotch-sh-admin
     build:
       dockerfile: prod.Dockerfile
