--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,33 @@
+.devenv*
+.direnv
+.devcontainer
+.git
+.github
+.husky
+.vscode
+
+.envrc
+devenv.yaml
+devenv.nix
+.prettierrc.js
+.prettierignore
+.editorconfig
+.npmrc
+.firebaserc
+
 node_modules
-**/*/node_modules
+**/node_modules
+
+**/dist
+**/build
+
+**/__tests__
+**/*.test.*
+**/coverage
+
+*.md
+LICENSE
+CODEOWNERS
+
+.DS_Store
+*.log
