--- a/packages/hoppscotch-desktop/package.json
+++ b/packages/hoppscotch-desktop/package.json
@@ -13,13 +13,13 @@
     "@fontsource-variable/inter": "5.1.0",
     "@fontsource-variable/material-symbols-rounded": "5.1.3",
     "@fontsource-variable/roboto-mono": "5.1.0",
-    "@hoppscotch/ui": "0.2.1",
     "@hoppscotch/kernel": "workspace:^",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-shell": "^2",
+    "@hoppscotch/plugin-appload": "github:CuriousCorrelation/tauri-plugin-appload",
+    "@hoppscotch/ui": "0.2.1",
+    "@tauri-apps/api": "2.1.1",
+    "@tauri-apps/plugin-shell": "2.0.1",
     "@tauri-apps/plugin-store": "2.2.0",
     "@vueuse/core": "11.1.0",
-    "@hoppscotch/plugin-appload": "github:CuriousCorrelation/tauri-plugin-appload",
     "fp-ts": "2.16.9",
     "vue": "^3.3.4",
     "vue-router": "4.4.5",
@@ -37,6 +37,6 @@
     "unplugin-icons": "0.19.3",
     "unplugin-vue-components": "0.27.4",
     "vite": "^5.3.1",
-    "vue-tsc": "^2.0.22"
+    "vue-tsc": "^2.2.0"
   }
 }
