--- a/packages/hoppscotch-desktop/plugin-workspace/tauri-plugin-appload/permissions/default.toml
+++ b/packages/hoppscotch-desktop/plugin-workspace/tauri-plugin-appload/permissions/default.toml
@@ -1,3 +1,3 @@
 [default]
 description = "Default permissions for AppLoad plugin"
-permissions = ["allow-load", "allow-download"]
+permissions = ["allow-load", "allow-download", "allow-clear"]
