--- a/.env.example
+++ b/.env.example
@@ -23,11 +23,11 @@ REDIRECT_URL="http://localhost:3000"
 # Whitelisted origins for the Hoppscotch App.
 # This list controls which origins can interact with the app through cross-origin comms.
 # - localhost ports (3170, 3000, 3100): app, backend, development servers and services
-# - app://localhost_3200_0_1_0: Bundle server origin identifier
+# - app://localhost_3200: Bundle server origin identifier
 #   NOTE: `3200` here refers to the bundle server (port 3200) that provides the bundles,
 #   NOT where the app runs. The app itself uses the `app://` protocol with dynamic
 #   bundle names like `app://{bundle-name}/`
-WHITELISTED_ORIGINS="http://localhost:3170,http://localhost:3000,http://localhost:3100,app://localhost_3200_0_1_0"
+WHITELISTED_ORIGINS="http://localhost:3170,http://localhost:3000,http://localhost:3100,app://localhost_3200"
 VITE_ALLOWED_AUTH_PROVIDERS=GOOGLE,GITHUB,MICROSOFT,EMAIL
 
 # Google Auth Config
