--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ REDIRECT_URL="http://localhost:3000"
 #   NOTE: `3200` here refers to the bundle server (port 3200) that provides the bundles,
 #   NOT where the app runs. The app itself uses the `app://` protocol with dynamic
 #   bundle names like `app://{bundle-name}/`
-WHITELISTED_ORIGINS="http://localhost:3170,http://localhost:3000,http://localhost:3100,app://localhost_3200"
+WHITELISTED_ORIGINS="http://localhost:3170,http://localhost:3000,http://localhost:3100,app://localhost_3200,app://hoppscotch"
 VITE_ALLOWED_AUTH_PROVIDERS=GOOGLE,GITHUB,MICROSOFT,EMAIL
 
 # Google Auth Config
