--- a/packages/hoppscotch-desktop/package.json
+++ b/packages/hoppscotch-desktop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hoppscotch-desktop",
   "private": true,
-  "version": "0.1.0",
+  "version": "25.2.0-0",
   "type": "module",
   "scripts": {
     "dev": "vite",
