fix(infra): docker compose service dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@
 services:
   # This service runs the backend app in the port 3170
   hoppscotch-backend:
-    profiles: ["backend", "just-backend"]
+    profiles: ["backend", "just-backend", "app", "admin"]
     container_name: hoppscotch-backend
     build:
       dockerfile: prod.Dockerfile
@@ -117,7 +117,7 @@ services:
   # you are using an external postgres instance
   # This will be exposed at port 5432
   hoppscotch-db:
-    profiles: ["default", "database", "just-backend"]
+    profiles: ["default", "database", "just-backend", "backend", "app", "admin"]
     image: postgres:15
     ports:
       - "5432:5432"
@@ -140,7 +140,7 @@ services:
 
   # Auto-migration service - handles database migrations automatically
   hoppscotch-migrate:
-    profiles: ["default", "just-backend"]
+    profiles: ["default", "just-backend", "backend", "app", "admin"]
     build:
       dockerfile: prod.Dockerfile
       context: .
