--- a/.github/workflows/release-push-docker.yml
+++ b/.github/workflows/release-push-docker.yml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        platform: [
-         { platform: linux/amd64, cache: docker-release-amd64 },
-         { platform: linux/arm64, cache: docker-release-arm64 },
-        ]
+    # strategy:
+    #   matrix:
+    #     platform: [
+    #      { platform: linux/amd64, cache: docker-release-amd64 },
+    #      { platform: linux/arm64, cache: docker-release-arm64 },
+    #     ]
     runs-on: ubuntu-latest
-    continue-on-error: true          # We can continue each platform deployment if the other fails
+    # continue-on-error: true          # We can continue each platform deployment if the other fails
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -41,10 +41,15 @@ jobs:
           file: ./prod.Dockerfile
           target: backend
           push: true
-          cache-from: type=gha,timeout=200m,scope=${{ matrix.platform.cache }}
-          cache-to: type=gha,mode=max,timeout=200m,scope=${{ matrix.platform.cache }}
+          # cache-from: type=gha,timeout=200m,scope=${{ matrix.platform.cache }}
+          # cache-to: type=gha,mode=max,timeout=200m,scope=${{ matrix.platform.cache }}
+          cache-from: type=gha,timeout=200m,scope=docker-release-allarch
+          cache-to: type=gha,mode=max,timeout=200m,scope=docker-release-allarch
+          # platforms: |
+          #   ${{ matrix.platform.platform }}
           platforms: |
-            ${{ matrix.platform.platform }}
+            linux/amd64
+            linux/arm64
           tags: |
             ${{ secrets.DOCKER_ORG_NAME }}/${{ secrets.DOCKER_BACKEND_CONTAINER_NAME }}:latest
             ${{ secrets.DOCKER_ORG_NAME }}/${{ secrets.DOCKER_BACKEND_CONTAINER_NAME }}:${{ github.ref_name }}
@@ -56,10 +61,15 @@ jobs:
           file: ./prod.Dockerfile
           target: app
           push: true
-          cache-from: type=gha,timeout=200m,scope=${{ matrix.platform.cache }}
-          cache-to: type=gha,mode=max,timeout=200m,scope=${{ matrix.platform.cache }}
+          # cache-from: type=gha,timeout=200m,scope=${{ matrix.platform.cache }}
+          # cache-to: type=gha,mode=max,timeout=200m,scope=${{ matrix.platform.cache }}
+          cache-from: type=gha,timeout=200m,scope=docker-release-allarch
+          cache-to: type=gha,mode=max,timeout=200m,scope=docker-release-allarch
+          # platforms: |
+          #   ${{ matrix.platform.platform }}
           platforms: |
-            ${{ matrix.platform.platform }}
+            linux/amd64
+            linux/arm64
           tags: |
             ${{ secrets.DOCKER_ORG_NAME }}/${{ secrets.DOCKER_FRONTEND_CONTAINER_NAME }}:latest
             ${{ secrets.DOCKER_ORG_NAME }}/${{ secrets.DOCKER_FRONTEND_CONTAINER_NAME }}:${{ github.ref_name }}
@@ -71,10 +81,15 @@ jobs:
           file: ./prod.Dockerfile
           target: sh_admin
           push: true
-          cache-from: type=gha,timeout=200m,scope=${{ matrix.platform.cache }}
-          cache-to: type=gha,mode=max,timeout=200m,scope=${{ matrix.platform.cache }}
+          # cache-from: type=gha,timeout=200m,scope=${{ matrix.platform.cache }}
+          # cache-to: type=gha,mode=max,timeout=200m,scope=${{ matrix.platform.cache }}
+          cache-from: type=gha,timeout=200m,scope=docker-release-allarch
+          cache-to: type=gha,mode=max,timeout=200m,scope=docker-release-allarch
+          # platforms: |
+          #   ${{ matrix.platform.platform }}
           platforms: |
-            ${{ matrix.platform.platform }}
+            linux/amd64
+            linux/arm64
           tags: |
             ${{ secrets.DOCKER_ORG_NAME }}/${{ secrets.DOCKER_SH_ADMIN_CONTAINER_NAME }}:latest
             ${{ secrets.DOCKER_ORG_NAME }}/${{ secrets.DOCKER_SH_ADMIN_CONTAINER_NAME }}:${{ github.ref_name }}
@@ -86,10 +101,15 @@ jobs:
           file: ./prod.Dockerfile
           target: aio
           push: true
-          cache-from: type=gha,timeout=200m,scope=${{ matrix.platform.cache }}
-          cache-to: type=gha,mode=max,timeout=200m,scope=${{ matrix.platform.cache }}
+          # cache-from: type=gha,timeout=200m,scope=${{ matrix.platform.cache }}
+          # cache-to: type=gha,mode=max,timeout=200m,scope=${{ matrix.platform.cache }}
+          cache-from: type=gha,timeout=200m,scope=docker-release-allarch
+          cache-to: type=gha,mode=max,timeout=200m,scope=docker-release-allarch
+          # platforms: |
+          #   ${{ matrix.platform.platform }}
           platforms: |
-            ${{ matrix.platform.platform }}
+            linux/amd64
+            linux/arm64
           tags: |
             ${{ secrets.DOCKER_ORG_NAME }}/${{ secrets.DOCKER_AIO_CONTAINER_NAME }}:latest
             ${{ secrets.DOCKER_ORG_NAME }}/${{ secrets.DOCKER_AIO_CONTAINER_NAME }}:${{ github.ref_name }}
