--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,29 @@
 #-----------------------Backend Config------------------------------#
 # Prisma Config
-DATABASE_URL=postgresql://postgres:testpass@hoppscotch-db:5432/hoppscotch
+DATABASE_URL=postgresql://username:password@url:5432/dbname # or replace with your database URL
+
+# (Optional) By default, the AIO container (when in subpath access mode) exposes the endpoint on port 80. Use this setting to specify a different port if needed.
+HOPP_AIO_ALTERNATE_PORT=80
 
 # Auth Tokens Config
-JWT_SECRET="secret1233"
+JWT_SECRET=secretcode123
 TOKEN_SALT_COMPLEXITY=10
-MAGIC_LINK_TOKEN_VALIDITY= 3
+MAGIC_LINK_TOKEN_VALIDITY=3
 # Default validity is 7 days (604800000 ms) in ms
-REFRESH_TOKEN_VALIDITY="604800000"
+REFRESH_TOKEN_VALIDITY=604800000
 # Default validity is 1 day (86400000 ms) in ms
-ACCESS_TOKEN_VALIDITY="86400000"
-SESSION_SECRET='add some secret here'
-# Reccomended to be true, set to false if you are using http
+ACCESS_TOKEN_VALIDITY=86400000
+SESSION_SECRET=anothersecretcode123
+
+# Recommended to be true, set to false if you are using http
 # Note: Some auth providers may not support http requests
 ALLOW_SECURE_COOKIES=true
 
 # Sensitive Data Encryption Key while storing in Database (32 character)
-DATA_ENCRYPTION_KEY="data encryption key with 32 char"
+DATA_ENCRYPTION_KEY=********************************
 
 # Hoppscotch App Domain Config
-REDIRECT_URL="http://localhost:3000"
+REDIRECT_URL=http://localhost:3000
 # Whitelisted origins for the Hoppscotch App.
 # This list controls which origins can interact with the app through cross-origin comms.
 # - localhost ports (3170, 3000, 3100): app, backend, development servers and services
@@ -27,50 +31,47 @@ REDIRECT_URL="http://localhost:3000"
 #   NOTE: `3200` here refers to the bundle server (port 3200) that provides the bundles,
 #   NOT where the app runs. The app itself uses the `app://` protocol with dynamic
 #   bundle names like `app://{bundle-name}/`
-WHITELISTED_ORIGINS="http://localhost:3170,http://localhost:3000,http://localhost:3100,app://localhost_3200,app://hoppscotch"
+WHITELISTED_ORIGINS=http://localhost:3170,http://localhost:3000,http://localhost:3100,app://localhost_3200,app://hoppscotch
 VITE_ALLOWED_AUTH_PROVIDERS=GOOGLE,GITHUB,MICROSOFT,EMAIL
 
 # Google Auth Config
-GOOGLE_CLIENT_ID="************************************************"
-GOOGLE_CLIENT_SECRET="************************************************"
-GOOGLE_CALLBACK_URL="http://localhost:3170/v1/auth/google/callback"
-GOOGLE_SCOPE="email,profile"
+GOOGLE_CLIENT_ID=************************************************
+GOOGLE_CLIENT_SECRET=************************************************
+GOOGLE_CALLBACK_URL=http://localhost:3170/v1/auth/google/callback
+GOOGLE_SCOPE=email,profile
 
 # Github Auth Config
-GITHUB_CLIENT_ID="************************************************"
-GITHUB_CLIENT_SECRET="************************************************"
-GITHUB_CALLBACK_URL="http://localhost:3170/v1/auth/github/callback"
-GITHUB_SCOPE="user:email"
+GITHUB_CLIENT_ID=************************************************
+GITHUB_CLIENT_SECRET=************************************************
+GITHUB_CALLBACK_URL=http://localhost:3170/v1/auth/github/callback
+GITHUB_SCOPE=user:email
 
 # Microsoft Auth Config
-MICROSOFT_CLIENT_ID="************************************************"
-MICROSOFT_CLIENT_SECRET="************************************************"
-MICROSOFT_CALLBACK_URL="http://localhost:3170/v1/auth/microsoft/callback"
-MICROSOFT_SCOPE="user.read"
-MICROSOFT_TENANT="common"
+MICROSOFT_CLIENT_ID=************************************************
+MICROSOFT_CLIENT_SECRET=************************************************
+MICROSOFT_CALLBACK_URL=http://localhost:3170/v1/auth/microsoft/callback
+MICROSOFT_SCOPE=user.read
+MICROSOFT_TENANT=common
 
 # Mailer config
-MAILER_SMTP_ENABLE="true"
-MAILER_USE_CUSTOM_CONFIGS="false"
-MAILER_ADDRESS_FROM='"From Name Here" <from@example.com>'
-
-MAILER_SMTP_URL="smtps://user@domain.com:pass@smtp.domain.com" # used if custom mailer configs is false
+MAILER_SMTP_ENABLE=true
+MAILER_USE_CUSTOM_CONFIGS=false
+MAILER_ADDRESS_FROM=<from@example.com>
+MAILER_SMTP_URL=smtps://user@domain.com:pass@smtp.domain.com # used if custom mailer configs is false
 
 # The following are used if custom mailer configs is true
-MAILER_SMTP_HOST="smtp.domain.com"
-MAILER_SMTP_PORT="587"
-MAILER_SMTP_SECURE="true"
-MAILER_SMTP_USER="user@domain.com"
-MAILER_SMTP_PASSWORD="pass"
-MAILER_TLS_REJECT_UNAUTHORIZED="true"
+MAILER_SMTP_HOST=smtp.domain.com
+MAILER_SMTP_PORT=587
+MAILER_SMTP_SECURE=true
+MAILER_SMTP_USER=user@domain.com
+MAILER_SMTP_PASSWORD=pass
+MAILER_TLS_REJECT_UNAUTHORIZED=true
 
 # Rate Limit Config
 RATE_LIMIT_TTL=60 # In seconds
 RATE_LIMIT_MAX=100 # Max requests per IP
 
-
 #-----------------------Frontend Config------------------------------#
-
 
 # Base URLs
 VITE_BASE_URL=http://localhost:3000
@@ -79,7 +80,7 @@ VITE_ADMIN_URL=http://localhost:3100
 
 # Backend URLs
 VITE_BACKEND_GQL_URL=http://localhost:3170/graphql
-VITE_BACKEND_WS_URL=ws://localhost:3170/graphql
+VITE_BACKEND_WS_URL=wss://localhost:3170/graphql
 VITE_BACKEND_API_URL=http://localhost:3170/v1
 
 # Terms Of Service And Privacy Policy Links (Optional)
