feat(desktop): complete lifecycle logs
This changes how logging is initialized and managed.

Basically some debug log messages just weren't appearing in the logs.

This was quite odd because other debug messages from the same module were
appearing correctly.

In Tauri app, logging is tricky... mainly because of the application
lifecycle.

The application starts in `main.rs` before any Tauri-specific functionality
is available. Having log sinks setup at `main` would be great, but we also
need file-based logging that requires the Tauri AppHandle to determine the
right log file paths.

There is a "theoretical" way to achieve this, to simply initialize logging
twice:

```rust
// In main.rs - Basic console logging
tracing_subscriber::registry()
    .with(tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| format!("{}=debug", env!("CARGO_CRATE_NAME")).into()))
    .with(tracing_subscriber::fmt::layer().without_time())
    .init();

// Later in lib.rs - File-based logging
logger::setup(app.handle().clone())?;
```

Why this doesn't work is `tracing` needs a global dispatcher

```
thread 'main' panicked at .../tracing-subscriber-0.3.19/src/util.rs:91:14:
failed to set global default subscriber: SetGlobalDefaultError("a global
default trace dispatcher has already been set")
```

This error occurs because the `tracing` ecosystem only allows setting the
global default subscriber once, see:
https://docs.rs/tracing-subscriber/latest/src/tracing_subscriber/util.rs.html#63-92

The issue is that when we use `init()` to initialize the global dispatcher
in `main.rs`, we can't set it again in `lib.rs`. This means any early logs
in the application lifecycle before the Tauri `AppHandle` is available were
getting captured by the basic console logger, but we couldn't add file-based
logging later.

The missing logs showed up when running the application with only the basic
console logger set in `main.rs`, but this approach lacks the file
persistence based loggi

--- a/packages/hoppscotch-desktop/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-desktop/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ portpicker = "0.1.1"
 tokio = "1.43.0"
 tauri-plugin-process = "2.2.0"
 file-rotate = "0.8.0"
+dirs = "6.0.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2.3.1"
