--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -34,12 +34,12 @@
     "@codemirror/search": "6.5.6",
     "@codemirror/state": "6.4.1",
     "@codemirror/view": "6.25.1",
-    "@hoppscotch/plugin-appload": "github:CuriousCorrelation/tauri-plugin-appload",
     "@hoppscotch/codemirror-lang-graphql": "workspace:^",
     "@hoppscotch/data": "workspace:^",
     "@hoppscotch/httpsnippet": "3.0.7",
     "@hoppscotch/js-sandbox": "workspace:^",
     "@hoppscotch/kernel": "workspace:^",
+    "@hoppscotch/plugin-appload": "github:CuriousCorrelation/tauri-plugin-appload",
     "@hoppscotch/ui": "0.2.2",
     "@hoppscotch/vue-toasted": "0.1.0",
     "@lezer/highlight": "1.2.0",
@@ -47,8 +47,8 @@
     "@scure/base": "1.1.9",
     "@shopify/lang-jsonc": "1.0.0",
     "@tauri-apps/plugin-store": "2.2.0",
-    "@types/markdown-it": "14.1.2",
     "@types/hawk": "9.0.6",
+    "@types/markdown-it": "14.1.2",
     "@unhead/vue": "1.11.10",
     "@urql/core": "5.0.6",
     "@urql/devtools": "2.0.3",
@@ -105,6 +105,7 @@
     "verzod": "0.2.4",
     "vue": "3.5.12",
     "vue-i18n": "10.0.4",
+    "vue-json-pretty": "2.4.0",
     "vue-pdf-embed": "2.1.0",
     "vue-router": "4.4.5",
     "vue-tippy": "6.5.0",
