--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -74,6 +74,7 @@
     "js-yaml": "4.1.0",
     "jsonc-parser": "3.3.1",
     "jsonpath-plus": "10.0.0",
+    "jsonwebtoken": "9.0.2",
     "lodash-es": "4.17.21",
     "lossless-json": "4.0.2",
     "markdown-it": "14.1.0",
