--- a/packages/hoppscotch-backend/package.json
+++ b/packages/hoppscotch-backend/package.json
@@ -76,6 +76,8 @@
     "rxjs": "7.8.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.27.0",
     "@nestjs/cli": "11.0.7",
     "@nestjs/schematics": "11.0.5",
     "@nestjs/testing": "11.1.1",
@@ -98,6 +100,7 @@
     "eslint": "9.27.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-prettier": "5.4.0",
+    "globals": "16.1.0",
     "jest": "29.7.0",
     "jest-mock-extended": "4.0.0-beta1",
     "prettier": "3.5.3",
