feat: add private key support for JWT authentication and update related components

--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -70,11 +70,11 @@
     "hawk": "9.0.2",
     "insomnia-importers": "3.6.0",
     "io-ts": "2.2.21",
+    "jose": "6.0.11",
     "js-md5": "0.8.3",
     "js-yaml": "4.1.0",
     "jsonc-parser": "3.3.1",
     "jsonpath-plus": "10.0.0",
-    "jsonwebtoken": "9.0.2",
     "lodash-es": "4.17.21",
     "lossless-json": "4.0.2",
     "markdown-it": "14.1.0",
