feat: add JWT token generation utility and update dependencies

--- a/packages/hoppscotch-data/package.json
+++ b/packages/hoppscotch-data/package.json
@@ -45,6 +45,7 @@
     "io-ts": "2.2.21",
     "lodash": "4.17.21",
     "parser-ts": "0.7.0",
+    "jose": "6.0.11",
     "uuid": "10.0.0",
     "verzod": "0.2.4",
     "zod": "3.23.8"
