--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -34,6 +34,7 @@
     "@codemirror/search": "6.5.6",
     "@codemirror/state": "6.4.1",
     "@codemirror/view": "6.25.1",
+    "@guolao/vue-monaco-editor": "1.5.5",
     "@hoppscotch/codemirror-lang-graphql": "workspace:^",
     "@hoppscotch/data": "workspace:^",
     "@hoppscotch/httpsnippet": "3.0.9",
@@ -79,6 +80,7 @@
     "lossless-json": "4.0.2",
     "markdown-it": "14.1.0",
     "minisearch": "7.1.0",
+    "monaco-editor": "0.52.2",
     "nprogress": "0.2.0",
     "paho-mqtt": "1.1.0",
     "path": "0.12.7",
