--- a/packages/hoppscotch-agent/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-agent/src-tauri/Cargo.toml
@@ -45,6 +45,8 @@ tauri-plugin-single-instance = "2.0.1"
 tauri-plugin-http = { version = "2.0.1", features = ["gzip"] }
 native-dialog = "0.7.0"
 sha2 = "0.10.8"
+file-rotate = "0.8.0"
+dirs = "6.0.0"
 
 [target.'cfg(windows)'.dependencies]
 tempfile = { version = "3.13.0" }
