feat(desktop): native tab keyboard shortcuts
This adds native menu items with keyboard accelerators for tab
management ops for the desktop app.

These are standard desktop app shortcuts for tab control.

The impl creates menu items with platform-appropriate
accelerators (Cmd/Ctrl) that emit events to the frontend keybinding
module so tab navigation and management can work.

Closes HFE-907
Closes #3520
Closes HP-24

\### Shortcuts added

- **Ctrl/Cmd+T**: Open new tab
- **Ctrl/Cmd+W**: Close current tab
- **Ctrl/Cmd+Alt+Left**: Navigate to previous tab
- **Ctrl/Cmd+Alt+Right**: Navigate to next tab
- **Ctrl/Cmd+0**: Navigate to the first tab
- **Ctrl/Cmd+9**: Navigate to the last tab

\### Implementation details

The architecture uses Tauri's native menu system to register
accelerators at the OS level, which then emit
`hoppscotch_desktop_shortcut` events to the frontend.

This approach makes shortcuts work globally within the app window and
follow platform conventions. Global shortcuts would have prevented
shortcuts from reaching other apps.

The FE keybinding system was extended to support desktop-specific
bindings through kernel mode detection, to separate base web shortcuts
from desktop-only shortcuts like these.

Some additions to tab service: methods like `goToNextTab()`,
`goToPreviousTab()`, `goToLastTab()`, `reopenClosedTab()` plus some
foundation for future shortcut expansion.

\### Notes to reviewers

This addresses the UX issue where users would accidentally close the
entire app when trying to close tabs with Ctrl/Cmd+W.

The shortcuts now match standard desktop application behavior across
most browsers and also IDEs to an extent.

All existing keyboard shortcuts remain functional. The desktop shortcuts
only activate when running in desktop kernel mode, so no changes  web
app behavior.

--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -46,6 +46,7 @@
     "@noble/curves": "1.6.0",
     "@scure/base": "1.1.9",
     "@shopify/lang-jsonc": "1.0.0",
+    "@tauri-apps/api": "2.1.1",
     "@tauri-apps/plugin-store": "2.2.0",
     "@types/hawk": "9.0.6",
     "@types/markdown-it": "14.1.2",
