--- a/packages/hoppscotch-desktop/package.json
+++ b/packages/hoppscotch-desktop/package.json
@@ -41,6 +41,6 @@
     "unplugin-icons": "0.19.3",
     "unplugin-vue-components": "0.27.4",
     "vite": "^5.3.1",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "2.2.0"
   }
 }
